feat(server/template): power UI pages with API data
-make more UI pages interact with API
-create API endpoints to get users running for an office

[delivers #164093911 #164359061]

--- a/UI/admin-offices.html
+++ b/UI/admin-offices.html
@@ -49,124 +49,12 @@
     <section id="offices">
         <i class="fas fa-bars fa-2x"></i>
         <i class="fas fa-times fa-2x"></i>
-        <h1>Government offices</h1>
-        <div class="one-office">
-            <div class="text">
-                <p>President Federal Republic Of Nigeria</p>
-                <button class="show-candidates">See all candidates</button>
-            </div>
-            <div class="candidates">
-                <form>
-                    <input type="radio" name="candidate"> Bolanle Afenikoro Elizabeth  [YDP]<br>
-                    <input type="radio" name="candidate"> Afe Babalola  [PDP]<br>
-                    <input type="radio" name="candidate"> Okoro Philip Odianfo  [ACCORD]<br>
-                    <input type="radio" name="candidate"> Okoro Philip Odianfo  [APC]<br>
-                    <input type="radio" name="candidate"> Peter Festus Jnr.  [APGA]<br>  
-                    <input type="submit" value="Register Candidate" class="vote-button">
-                </form>
-            </div>
-        </div>
-        <div class="one-office">
-            <div class="text">
-                <p>Executive Governor Of Lagos state</p>
-                <button class="show-candidates">See all candidates</button>
-            </div>
-            <div class="candidates">
-                <form>
-                    <input type="radio" name="candidate"> Bolanle Afenikoro Elizabeth  [YDP]<br>
-                    <input type="radio" name="candidate"> Afe Babalola [PDP]<br>
-                    <input type="radio" name="candidate"> Okoro Philip Odianfo [ACCORD]<br>
-                    <input type="radio" name="candidate"> Okoro Philip Odianfo  [APC]<br>
-                    <input type="radio" name="candidate"> Peter Festus Jnr.  [APGA]<br>  
-                    <input type="submit" value="Register Candidate" class="vote-button">
-                </form>
-            </div>
-        </div>
-        <div class="one-office">
-            <div class="text">
-                <p>Senate President Federal Republic Of Nigeria</p>
-                <button class="show-candidates">See all candidates</button>
-            </div>
-            <div class="candidates">
-                <form>
-                    <input type="radio" name="candidate"> Bolanle Afenikoro Elizabeth  [YDP]<br>
-                    <input type="radio" name="candidate"> Afe Babalola [PDP]<br>
-                    <input type="radio" name="candidate"> Okoro Philip Odianfo [ACCORD]<br>
-                    <input type="radio" name="candidate"> Okoro Philip Odianfo  [APC]<br>
-                    <input type="radio" name="candidate"> Peter Festus Jnr.  [APGA]<br>  
-                    <input type="submit" value="Register Candidate" class="vote-button">
-                </form>
-            </div>
-        </div>
-        <div class="one-office">
-            <div class="text">
-                <p>Senator Lagos Central Constituency</p>
-                <button class="show-candidates">See all candidates</button>
-            </div>
-            <div class="candidates">
-                <form>
-                    <input type="radio" name="candidate"> Bolanle Afenikoro Elizabeth  [YDP]<br>
-                    <input type="radio" name="candidate"> Afe Babalola [PDP]<br>
-                    <input type="radio" name="candidate"> Okoro Philip Odianfo [ACCORD]<br>
-                    <input type="radio" name="candidate"> Okoro Philip Odianfo  [APC]<br>
-                    <input type="radio" name="candidate"> Peter Festus Jnr.  [APGA]<br>  
-                    <input type="submit" value="Register Candidate" class="vote-button">
-                </form>
-            </div>
-        </div>
-        <div class="one-office">
-            <div class="text">
-                <p>Senator Lagos West Constituency</p>
-                <button class="show-candidates">See all candidates</button>
-            </div>
-            <div class="candidates">
-                <form>
-                    <input type="radio" name="candidate"> Bolanle Afenikoro Elizabeth  [YDP]<br>
-                    <input type="radio" name="candidate"> Afe Babalola [PDP]<br>
-                    <input type="radio" name="candidate"> Okoro Philip Odianfo [ACCORD]<br>
-                    <input type="radio" name="candidate"> Okoro Philip Odianfo  [APC]<br>
-                    <input type="radio" name="candidate"> Peter Festus Jnr.  [APGA]<br>  
-                    <input type="submit" value="Register Candidate" class="vote-button">
-                </form>
-            </div>
-        </div>
-        <div class="one-office">
-            <div class="text">
-                <p>House Of Representatives Lagos Central</p>
-                <button class="show-candidates">See all candidates</button>
-            </div>
-            <div class="candidates">
-                <form>
-                    <input type="radio" name="candidate"> Bolanle Afenikoro Elizabeth  [YDP]<br>
-                    <input type="radio" name="candidate"> Afe Babalola [PDP]<br>
-                    <input type="radio" name="candidate"> Okoro Philip Odianfo [ACCORD]<br>
-                    <input type="radio" name="candidate"> Okoro Philip Odianfo  [APC]<br>
-                    <input type="radio" name="candidate"> Peter Festus Jnr.  [APGA]<br>  
-                    <input type="submit" value="Register Candidate" class="vote-button">
-                </form>
-            </div>
-        </div>
-        <div class="one-office">
-            <div class="text">
-                <p>House Of Representatives Lagos West</p>
-                <button class="show-candidates">See all candidates</button>
-            </div>
-            <div class="candidates">
-                <form>
-                    <input type="radio" name="candidate"> Bolanle Afenikoro Elizabeth  [YDP]<br>
-                    <input type="radio" name="candidate"> Afe Babalola [PDP]<br>
-                    <input type="radio" name="candidate"> Okoro Philip Odianfo [ACCORD]<br>
-                    <input type="radio" name="candidate"> Okoro Philip Odianfo  [APC]<br>
-                    <input type="radio" name="candidate"> Peter Festus Jnr.  [APGA]<br>  
-                    <input type="submit" value="Register Candidate" class="vote-button">
-                </form>
-            </div>
-        </div>
+        <h1>Register Candidates for office</h1>
     </section>
     <footer>
         &copy; Politico 2019
     </footer>
     <script src="js/profile.js"></script>
-    <script src="js/offices.js"></script>
+    <script src="../jsScript/officesResults.js"></script>
 </body>
 </html>
