--- a/UI/create-party.html
+++ b/UI/create-party.html
@@ -58,6 +58,8 @@
                     <form id="sign-in-form">
                         <label for="party-name">Party Name</label>
                         <input type="text" id="party-name" class="input"><br>
+                        <label for="party-name-abbreviation">Party Name Abbreviation</label>
+                        <input type="text" id="party-name-abbreviation" class="input"><br>
                         <label for="party-address">Head Quater Address</label>
                         <input type="text" id="party-address" class="input"><br>
                         <label for="party-logo">Logo URL</label>
