--- a/UI/results.html
+++ b/UI/results.html
@@ -45,116 +45,11 @@
         <i class="fas fa-bars fa-2x"></i>
         <i class="fas fa-times fa-2x"></i>
         <h1>Government offices</h1>
-        <div class="one-office">
-            <div class="text">
-                <p>President Federal Republic Of Nigeria</p>
-                <button class="show-candidates">Show result</button>
-            </div>
-            <div class="candidates">
-                <form>
-                    <p>Bolanle Afenikoro Elizabeth  [YDP]</p> <span>112 Votes</span>
-                    <p>Afe Babalola [PDP] </p> <span>109 Votes</span>
-                    <p>Okoro Philip Odianfo [ACCORD] </p> <span>15 Votes</span>
-                    <div class="winner"><p>Victoria Akpan John  [APC] </p> <span>302 Votes</span></div>
-                    <p>Peter Festus Jnr.  [APGA] </p> <span>47 Votes</span>
-                </form>
-            </div>
-        </div>
-        <div class="one-office">
-            <div class="text">
-                <p>Executive Governor Of Lagos state</p>
-                <button class="show-candidates">Show result</button>
-            </div>
-            <div class="candidates">
-                <form>
-                    <p>Bolanle Afenikoro Elizabeth  [YDP]</p> <span>112 Votes</span>
-                    <p>Afe Babalola [PDP] </p> <span>109 Votes</span>
-                    <p>Okoro Philip Odianfo [ACCORD] </p> <span>15 Votes</span>
-                    <div class="winner"><p>Victoria Akpan John  [APC] </p> <span>302 Votes</span></div>
-                    <p>Peter Festus Jnr.  [APGA] </p> <span>47 Votes</span>
-                </form>
-            </div>
-        </div>
-        <div class="one-office">
-            <div class="text">
-                <p>Senate President Federal Republic Of Nigeria</p>
-                <button class="show-candidates">Show result</button>
-            </div>
-            <div class="candidates">
-                <form>
-                    <p>Bolanle Afenikoro Elizabeth  [YDP]</p> <span>112 Votes</span>
-                    <p>Afe Babalola [PDP] </p> <span>109 Votes</span>
-                    <p>Okoro Philip Odianfo [ACCORD] </p> <span>15 Votes</span>
-                    <div class="winner"><p>Victoria Akpan John  [APC] </p> <span>302 Votes</span></div>
-                    <p>Peter Festus Jnr.  [APGA] </p> <span>47 Votes</span>
-                </form>
-            </div>
-        </div>
-        <div class="one-office">
-            <div class="text">
-                <p>Senator Lagos Central Constituency</p>
-                <button class="show-candidates">Show result</button>
-            </div>
-            <div class="candidates">
-                <form>
-                    <p>Bolanle Afenikoro Elizabeth  [YDP]</p> <span>112 Votes</span>
-                    <p>Afe Babalola [PDP] </p> <span>109 Votes</span>
-                    <p>Okoro Philip Odianfo [ACCORD] </p> <span>15 Votes</span>
-                    <div class="winner"><p>Victoria Akpan John  [APC] </p> <span>302 Votes</span></div>
-                    <p>Peter Festus Jnr.  [APGA] </p> <span>47 Votes</span>
-                </form>
-            </div>
-        </div>
-        <div class="one-office">
-            <div class="text">
-                <p>Senator Lagos West Constituency</p>
-                <button class="show-candidates">Show result</button>
-            </div>
-            <div class="candidates">
-                <form>
-                    <p>Bolanle Afenikoro Elizabeth  [YDP]</p> <span>112 Votes</span>
-                    <p>Afe Babalola [PDP] </p> <span>109 Votes</span>
-                    <p>Okoro Philip Odianfo [ACCORD] </p> <span>15 Votes</span>
-                    <div class="winner"><p>Victoria Akpan John  [APC] </p> <span>302 Votes</span></div>
-                    <p>Peter Festus Jnr.  [APGA] </p> <span>47 Votes</span>
-                </form>
-            </div>
-        </div>
-        <div class="one-office">
-            <div class="text">
-                <p>House Of Representatives Lagos Central</p>
-                <button class="show-candidates">Show result</button>
-            </div>
-            <div class="candidates">
-                <form>
-                     <p>Bolanle Afenikoro Elizabeth  [YDP]</p> <span>112 Votes</span>
-                     <p>Afe Babalola [PDP] </p> <span>109 Votes</span>
-                     <p>Okoro Philip Odianfo [ACCORD] </p> <span>15 Votes</span>
-                     <div class="winner"><p>Victoria Akpan John  [APC] </p> <span>302 Votes</span></div>
-                     <p>Peter Festus Jnr.  [APGA] </p> <span>47 Votes</span>     
-                </form>
-            </div>
-        </div>
-        <div class="one-office">
-            <div class="text">
-                <p>House Of Representatives Lagos West</p>
-                <button class="show-candidates">Show result</button>
-            </div>
-            <div class="candidates">
-                <form>
-                    <p>Bolanle Afenikoro Elizabeth  [YDP]</p> <span>112 Votes</span>
-                    <p>Afe Babalola [PDP] </p> <span>109 Votes</span>
-                    <p>Okoro Philip Odianfo [ACCORD] </p> <span>15 Votes</span>
-                    <div class="winner"><p>Victoria Akpan John  [APC] </p> <span>302 Votes</span></div>
-                    <p>Peter Festus Jnr.  [APGA] </p> <span>47 Votes</span>
-                </form>
-            </div>
-        </div>
     </section>
     <footer>
         &copy; Politico 2019
     </footer>
     <script src="js/profile.js"></script>
-    <script src="js/offices.js"></script>
+    <script src="../jsScript/officesResults.js"></script>
 </body>
 </html>
