--- a/UI/offices.html
+++ b/UI/offices.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/offices.css">
 </head>
+<body>
     <nav>
+        <div id="offices-result"></div>
         <ul>
             <li class="logo">
                 <a href="https://jesse-efe.github.io/Politico/UI/" class="logo">Politico</a>
@@ -45,123 +47,12 @@
         <i class="fas fa-bars fa-2x"></i>
         <i class="fas fa-times fa-2x"></i>
         <h1>Government offices</h1>
-        <div class="one-office">
-            <div class="text">
-                <p>President Federal Republic Of Nigeria</p>
-                <button class="show-candidates">See all candidates</button>
-            </div>
-            <div class="candidates">
-                <form>
-                    <input type="radio" name="candidate"> Bolanle Afenikoro Elizabeth  [YDP]<br>
-                    <input type="radio" name="candidate"> Afe Babalola  [PDP]<br>
-                    <input type="radio" name="candidate"> Okoro Philip Odianfo  [ACCORD]<br>
-                    <input type="radio" name="candidate"> Okoro Philip Odianfo  [APC]<br>
-                    <input type="radio" name="candidate"> Peter Festus Jnr.  [APGA]<br>  
-                    <input type="submit" value="VOTE" class="vote-button">
-                </form>
-            </div>
-        </div>
-        <div class="one-office">
-            <div class="text">
-                <p>Executive Governor Of Lagos state</p>
-                <button class="show-candidates">See all candidates</button>
-            </div>
-            <div class="candidates">
-                <form>
-                    <input type="radio" name="candidate"> Bolanle Afenikoro Elizabeth  [YDP]<br>
-                    <input type="radio" name="candidate"> Afe Babalola [PDP]<br>
-                    <input type="radio" name="candidate"> Okoro Philip Odianfo [ACCORD]<br>
-                    <input type="radio" name="candidate"> Okoro Philip Odianfo  [APC]<br>
-                    <input type="radio" name="candidate"> Peter Festus Jnr.  [APGA]<br>  
-                    <input type="submit" value="VOTE" class="vote-button">
-                </form>
-            </div>
-        </div>
-        <div class="one-office">
-            <div class="text">
-                <p>Senate President Federal Republic Of Nigeria</p>
-                <button class="show-candidates">See all candidates</button>
-            </div>
-            <div class="candidates">
-                <form>
-                    <input type="radio" name="candidate"> Bolanle Afenikoro Elizabeth  [YDP]<br>
-                    <input type="radio" name="candidate"> Afe Babalola [PDP]<br>
-                    <input type="radio" name="candidate"> Okoro Philip Odianfo [ACCORD]<br>
-                    <input type="radio" name="candidate"> Okoro Philip Odianfo  [APC]<br>
-                    <input type="radio" name="candidate"> Peter Festus Jnr.  [APGA]<br>  
-                    <input type="submit" value="VOTE" class="vote-button">
-                </form>
-            </div>
-        </div>
-        <div class="one-office">
-            <div class="text">
-                <p>Senator Lagos Central Constituency</p>
-                <button class="show-candidates">See all candidates</button>
-            </div>
-            <div class="candidates">
-                <form>
-                    <input type="radio" name="candidate"> Bolanle Afenikoro Elizabeth  [YDP]<br>
-                    <input type="radio" name="candidate"> Afe Babalola [PDP]<br>
-                    <input type="radio" name="candidate"> Okoro Philip Odianfo [ACCORD]<br>
-                    <input type="radio" name="candidate"> Okoro Philip Odianfo  [APC]<br>
-                    <input type="radio" name="candidate"> Peter Festus Jnr.  [APGA]<br>  
-                    <input type="submit" value="VOTE" class="vote-button">
-                </form>
-            </div>
-        </div>
-        <div class="one-office">
-            <div class="text">
-                <p>Senator Lagos West Constituency</p>
-                <button class="show-candidates">See all candidates</button>
-            </div>
-            <div class="candidates">
-                <form>
-                    <input type="radio" name="candidate"> Bolanle Afenikoro Elizabeth  [YDP]<br>
-                    <input type="radio" name="candidate"> Afe Babalola [PDP]<br>
-                    <input type="radio" name="candidate"> Okoro Philip Odianfo [ACCORD]<br>
-                    <input type="radio" name="candidate"> Okoro Philip Odianfo  [APC]<br>
-                    <input type="radio" name="candidate"> Peter Festus Jnr.  [APGA]<br>  
-                    <input type="submit" value="VOTE" class="vote-button">
-                </form>
-            </div>
-        </div>
-        <div class="one-office">
-            <div class="text">
-                <p>House Of Representatives Lagos Central</p>
-                <button class="show-candidates">See all candidates</button>
-            </div>
-            <div class="candidates">
-                <form>
-                    <input type="radio" name="candidate"> Bolanle Afenikoro Elizabeth  [YDP]<br>
-                    <input type="radio" name="candidate"> Afe Babalola [PDP]<br>
-                    <input type="radio" name="candidate"> Okoro Philip Odianfo [ACCORD]<br>
-                    <input type="radio" name="candidate"> Okoro Philip Odianfo  [APC]<br>
-                    <input type="radio" name="candidate"> Peter Festus Jnr.  [APGA]<br>  
-                    <input type="submit" value="VOTE" class="vote-button">
-                </form>
-            </div>
-        </div>
-        <div class="one-office">
-            <div class="text">
-                <p>House Of Representatives Lagos West</p>
-                <button class="show-candidates">See all candidates</button>
-            </div>
-            <div class="candidates">
-                <form>
-                    <input type="radio" name="candidate"> Bolanle Afenikoro Elizabeth  [YDP]<br>
-                    <input type="radio" name="candidate"> Afe Babalola [PDP]<br>
-                    <input type="radio" name="candidate"> Okoro Philip Odianfo [ACCORD]<br>
-                    <input type="radio" name="candidate"> Okoro Philip Odianfo  [APC]<br>
-                    <input type="radio" name="candidate"> Peter Festus Jnr.  [APGA]<br>  
-                    <input type="submit" value="VOTE" class="vote-button">
-                </form>
-            </div>
-        </div>
+        
     </section>
     <footer>
         &copy; Politico 2019
     </footer>
-    <script src="js/offices.js"></script>
+    <script src="../jsScript/officesResults.js"></script>
     <script src="js/profile.js"></script>
 </body>
 </html>
